# Arithmetic-Expression-Evaluator

./: AndOp.h  CMakeLists.txt  Orop.h  README.md  conditional.h  divide.h  equalto.h  expression.h  greaterthan.h  input.txt  lessthan.h  literal.h  minus.h  negate.h  operand.cpp  operand.h  parse.cpp  parse.h  plus.h  project2.cpp  subexpression.cpp  subexpression.h  symboltable.cpp  symboltable.h  times.h  variable.cpp  variable.h
docker/: Dockerfile
